--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,6 +13,12 @@ li {
 
 /*********** Mobile Styling ************/
 
+.navbar-brand {
+	font-size: 2em;
+	font-weight: bold;
+	letter-spacing: 2px;
+}
+
 .banner {
 	margin-top: 50px;
 	height: 240px;
@@ -36,5 +42,24 @@ li {
 	}
 	h1 {
 		padding-left: 20px;
+	}
+}
+
+.footer {
+	height: 100px;
+	padding-top: 10px;
+	background-color: #ddd;
+	p {
+		display: inline;
+		float: left;
+		margin-bottom: 5px;
+	}
+	.social-links {
+		display: inline;
+		.social-icon {
+			float: right;
+			padding-right: 5px;
+			margin-right: 5px;
+		}
 	}
 }
