--- a/css/styles.css
+++ b/css/styles.css
@@ -40,12 +40,15 @@ li {
   .footer p {
     display: inline;
     float: left;
-    margin-bottom: 5px; }
+    margin-bottom: 5px;
+    margin-left: 15px; }
   .footer .social-links {
-    display: inline; }
+    display: inline;
+    float: right;
+    padding-left: 0px; }
     .footer .social-links .social-icon {
-      float: right;
+      display: inline;
       padding-right: 5px;
-      margin-right: 5px; }
+      margin-right: 15px; }
 
 /*# sourceMappingURL=styles.css.map */
