--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ li {
     padding-left: 20px; }
 
 .footer {
-  height: 100px;
+  height: 70px;
   padding-top: 10px;
   background-color: #ddd; }
   .footer p {
@@ -50,5 +50,8 @@ li {
       display: inline;
       padding-right: 5px;
       margin-right: 15px; }
+      .footer .social-links .social-icon a img {
+        max-width: 50px;
+        max-height: 50px; }
 
 /*# sourceMappingURL=styles.css.map */
