--- a/css/styles.scss
+++ b/css/styles.scss
@@ -46,7 +46,7 @@ li {
 }
 
 .footer {
-	height: 100px;
+	height: 70px;
 	padding-top: 10px;
 	background-color: #ddd;
 	p {
@@ -63,6 +63,10 @@ li {
 			display: inline;
 			padding-right: 5px;
 			margin-right: 15px;
+			a img{
+				max-width: 50px;
+				max-height: 50px;
+			}
 		}
 	}
 }
