cleared elements under nav; added events.html file

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -19,8 +19,11 @@ li {
 	letter-spacing: 2px;
 }
 
+.filler {
+	height:50px;
+}
+
 .banner {
-	margin-top: 50px;
 	height: 240px;
 	border-bottom: 2px solid #000;
 	background-color: #999;
