--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,10 @@ li {
   font-weight: bold;
   letter-spacing: 2px; }
 
+.filler {
+  height: 50px; }
+
 .banner {
-  margin-top: 50px;
   height: 240px;
   border-bottom: 2px solid #000;
   background-color: #999; }
