--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,13 @@ li {
   .event h1, .listen h1 {
     padding-left: 20px; }
 
+.about {
+  display: inline-block;
+  margin-bottom: 30px; }
+  .about h2, .about p {
+    margin-left: 15px;
+    margin-right: 15px; }
+
 .footer {
   height: 70px;
   padding-top: 10px;
@@ -54,6 +61,7 @@ li {
       margin-right: 15px; }
       .footer .social-links .social-icon a img {
         max-width: 50px;
-        max-height: 50px; }
+        max-height: 50px;
+        opacity: 0.6; }
 
 /*# sourceMappingURL=styles.css.map */
