--- a/css/styles.scss
+++ b/css/styles.scss
@@ -48,6 +48,15 @@ li {
 	}
 }
 
+.about {
+	display: inline-block;
+	margin-bottom: 30px;
+	h2, p {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+}
+
 .footer {
 	height: 70px;
 	padding-top: 10px;
@@ -69,6 +78,7 @@ li {
 			a img{
 				max-width: 50px;
 				max-height: 50px;
+				opacity: 0.6;
 			}
 		}
 	}
