--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,10 @@
+/* colors */
 
+/*	light brown = A57745
+	dark brown = 583C1C
+	green = 5CB26A
+	purple = 8C59F1
+	
 
 /*********** Remove default styling ***********/
 
@@ -13,6 +19,34 @@ li {
 
 /*********** Mobile Styling ************/
 
+	/** mobile nav **/
+
+nav ul {
+	display: none;
+	height: auto;
+}
+
+#pull {
+	display: block;
+	background-color: #ccc;
+	width: 100%;
+	position: relative;
+}
+
+#pull:after {
+	content: "";
+	background: url('../img/navicon.png') no-repeat;
+	width: 30px;
+	height: 40px;
+	display: inline-block;
+	position: absolute;
+	right: 15px;
+	top: 10px;
+}
+	
+
+	/** custom BS nav styling **/
+
 .navbar-brand {
 	font-size: 2em;
 	font-weight: bold;
@@ -20,7 +54,7 @@ li {
 }
 
 .filler {
-	height:50px;
+	height:40px;
 }
 
 .banner {
@@ -35,6 +69,7 @@ li {
 	height: 60px;
 	margin-top: 15px;
 }
+
 
 .event {
 	border-bottom: 1px solid #ddd;
@@ -99,6 +134,66 @@ li {
 
 @media only screen and (min-width : 768px) {
 
+/** desktop nav **/
+
+nav {
+	height: 40px;
+	width: 100%;
+	background: #ccc;
+	font-size: 1em;
+	font-weight: bold;
+	position: relative;
+	border-bottom: 2px solid #aaa;
+}
+
+nav ul {
+	display: block;
+	padding: 0;
+	margin: 0 auto;
+	width: 768px;
+	height: 40px;
+	li:last-child a {
+		border-left: 1px solid #aaa;
+	}
+	li {
+		display: inline;
+		float: right;
+		a {
+			color: #222;
+			display: inline-block;
+			width: 100px;
+			text-align: center;
+			line-height: 40px;
+			border-right: 1px solid #aaa;
+			box-sizing: border-box;
+		}
+		a:hover, a:active {
+			background-color: #ddd;
+		}
+	}
+}
+#pull {
+		display: none;
+	}
+
+	/** clearfix **/
+
+.clearfix:before,
+.clearfix:after {
+  content: "  ";
+  display: table;
+}
+
+.clearfix:after {
+  clear: both;
+}
+
+.clearfix {
+  *zoom: 1;
+}
+
+
+ /** desktop BS styling **/
 	.navbar-brand {
 		margin-top: 12px;
 		font-size: 3em;
