--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,9 @@ li {
 
 /*********** Mobile Styling ************/
 /** mobile nav **/
+.filler {
+  background: #ccc; }
+
 nav {
   position: fixed;
   top: 0;
@@ -22,7 +25,14 @@ nav {
   width: 100%; }
   nav ul {
     display: none;
-    height: auto; }
+    height: auto;
+    background: #ccc;
+    padding-right: 20px;
+    z-index: 9000; }
+    nav ul li {
+      text-align: right;
+      font-size: 1.5em;
+      font-weight: bold; }
 
 #pull {
   display: block;
@@ -113,7 +123,6 @@ nav {
   nav {
     height: 50px;
     width: 100%;
-    background: #ccc;
     font-size: 1em;
     font-weight: bold;
     border-bottom: 2px solid #aaa; }
@@ -122,7 +131,7 @@ nav {
     display: block;
     padding: 0;
     margin: 0 auto;
-    width: 768px;
+    width: 100%;
     height: 50px; }
     nav ul li:last-child a {
       border-left: 1px solid #aaa; }
