--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,6 +21,10 @@ li {
 
 	/** mobile nav **/
 
+.filler {
+	background: #ccc;
+
+}
 nav {
 	position: fixed;
 	top: 0;
@@ -29,8 +33,17 @@ nav {
 	ul {
 		display: none;
 		height: auto;
+		background: #ccc;
+		padding-right: 20px;
+		z-index: 9000;
+		li {
+			text-align: right;
+			font-size: 1.5em;
+			font-weight: bold;
+		}
 	}
 }
+
 
 #pull {
 	display: block;
@@ -145,7 +158,6 @@ nav {
 nav {
 	height: 50px;
 	width: 100%;
-	background: #ccc;
 	font-size: 1em;
 	font-weight: bold;
 	border-bottom: 2px solid #aaa;
@@ -155,7 +167,7 @@ nav ul {
 	display: block;
 	padding: 0;
 	margin: 0 auto;
-	width: 768px;
+	width: 100%;
 	height: 50px;
 	li:last-child a {
 		border-left: 1px solid #aaa;
