fixed hover features in nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,12 +27,18 @@ nav {
     display: none;
     height: auto;
     background: #ccc;
+    margin-top: 50px;
     padding-right: 20px;
     z-index: 9000; }
     nav ul li {
+      padding-bottom: 20px;
       text-align: right;
       font-size: 1.5em;
       font-weight: bold; }
+      nav ul li a {
+        padding: 5px; }
+      nav ul li a:hover, nav ul li a:active {
+        background-color: #ddd; }
 
 #pull {
   display: block;
@@ -137,17 +143,17 @@ nav {
       border-left: 1px solid #aaa; }
     nav ul li {
       display: inline;
-      float: right; }
+      float: right;
+      padding-bottom: 0px; }
       nav ul li a {
         color: #222;
         display: inline-block;
+        padding: 0;
         width: 100px;
         text-align: center;
         line-height: 50px;
         border-right: 1px solid #aaa;
         box-sizing: border-box; }
-      nav ul li a:hover, nav ul li a:active {
-        background-color: #ddd; }
 
   #pull {
     display: none; }
