fixed menu ordering issue when resizing window

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -38,8 +38,8 @@ nav {
 		padding-right: 20px;
 		z-index: 9000;
 		li {
-			padding-bottom: 20px;
-			text-align: right;
+			padding-bottom: 30px;
+			text-align: center;
 			font-size: 1.5em;
 			font-weight: bold;
 			a {
