--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,8 @@ nav {
     padding-right: 20px;
     z-index: 9000; }
     nav ul li {
-      padding-bottom: 20px;
-      text-align: right;
+      padding-bottom: 30px;
+      text-align: center;
       font-size: 1.5em;
       font-weight: bold; }
       nav ul li a {
@@ -134,16 +134,13 @@ nav {
     border-bottom: 2px solid #aaa; }
 
   nav ul {
-    display: block;
+    display: inline;
+    float: right;
     padding: 0;
     margin: 0 auto;
-    width: 100%;
     height: 50px; }
-    nav ul li:last-child a {
-      border-left: 1px solid #aaa; }
     nav ul li {
       display: inline;
-      float: right;
       padding-bottom: 0px; }
       nav ul li a {
         color: #222;
@@ -152,7 +149,7 @@ nav {
         width: 100px;
         text-align: center;
         line-height: 50px;
-        border-right: 1px solid #aaa;
+        border-left: 1px solid #aaa;
         box-sizing: border-box; }
 
   #pull {
