--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,12 @@ nav {
     height: auto;
     background: #ccc;
     margin-top: 50px;
+    opacity: 0.8;
     padding-right: 20px;
     z-index: 9000; }
     nav ul li {
       padding-bottom: 30px;
+      padding-top: 10px;
       text-align: center;
       font-size: 1.5em;
       font-weight: bold; }
@@ -131,26 +133,26 @@ nav {
     width: 100%;
     font-size: 1em;
     font-weight: bold;
-    border-bottom: 2px solid #aaa; }
-
-  nav ul {
-    display: inline;
-    float: right;
-    padding: 0;
-    margin: 0 auto;
-    height: 50px; }
-    nav ul li {
+    border-bottom: 2px solid #666; }
+    nav ul {
       display: inline;
-      padding-bottom: 0px; }
-      nav ul li a {
-        color: #222;
-        display: inline-block;
-        padding: 0;
-        width: 100px;
-        text-align: center;
-        line-height: 50px;
-        border-left: 1px solid #aaa;
-        box-sizing: border-box; }
+      float: right;
+      padding: 0;
+      opacity: 1;
+      margin: 0 auto;
+      height: 50px; }
+      nav ul li {
+        display: inline;
+        padding-bottom: 0px; }
+        nav ul li a {
+          color: #222;
+          display: inline-block;
+          padding: 0;
+          width: 100px;
+          text-align: center;
+          line-height: 50px;
+          border-left: 1px solid #aaa;
+          box-sizing: border-box; }
 
   #pull {
     display: none; }
