--- a/css/styles.scss
+++ b/css/styles.scss
@@ -35,10 +35,12 @@ nav {
 		height: auto;
 		background: #ccc;
 		margin-top: 50px;
+		opacity: 0.8;
 		padding-right: 20px;
 		z-index: 9000;
 		li {
 			padding-bottom: 30px;
+			padding-top: 10px;
 			text-align: center;
 			font-size: 1.5em;
 			font-weight: bold;
@@ -168,31 +170,27 @@ nav {
 	width: 100%;
 	font-size: 1em;
 	font-weight: bold;
-	border-bottom: 2px solid #aaa;
-}
-
-nav ul {
-	display: block;
-	padding: 0;
-	margin: 0 auto;
-	width: 100%;
-	height: 50px;
-	li:last-child a {
-		border-left: 1px solid #aaa;
-	}
-	li {
+	border-bottom: 2px solid #666;
+	ul {
 		display: inline;
 		float: right;
-		padding-bottom: 0px;
-		a {
-			color: #222;
-			display: inline-block;
-			padding: 0;
-			width: 100px;
-			text-align: center;
-			line-height: 50px;
-			border-right: 1px solid #aaa;
-			box-sizing: border-box;
+		padding: 0;
+		opacity: 1;
+		margin: 0 auto;
+		height: 50px;
+		li {
+			display: inline;
+			padding-bottom: 0px;
+			a {
+				color: #222;
+				display: inline-block;
+				padding: 0;
+				width: 100px;
+				text-align: center;
+				line-height: 50px;
+				border-left: 1px solid #aaa;
+				box-sizing: border-box;
+			}
 		}
 	}
 }
