--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,26 +21,25 @@ li {
 
 	/** mobile nav **/
 
-.filler {
-	background: #ccc;
-
-}
 nav {
 	position: fixed;
 	top: 0;
 	z-index: 10000;
 	width: 100%;
+	height: 50px;
+	background: #ccc;
+	border-bottom: 2px solid #666;
 	ul {
 		display: none;
 		height: auto;
 		background: #ccc;
-		margin-top: 50px;
 		opacity: 0.8;
-		padding-right: 20px;
+		padding: 0;
+		margin: 0;
 		z-index: 9000;
 		li {
-			padding-bottom: 30px;
-			padding-top: 10px;
+			padding-bottom: 20px;
+			padding-top: 20px;
 			text-align: center;
 			font-size: 1.5em;
 			font-weight: bold;
@@ -54,6 +53,9 @@ nav {
 	}
 }
 
+.selected {
+	background-color: #ddd;
+}
 
 #pull {
 	display: block;
@@ -73,18 +75,22 @@ nav {
 	top: 10px;
 }
 	
+	/** logo styling **/
 
-	/** custom BS nav styling **/
-
-.navbar-brand {
+.logo {
+	display: inline-block;
 	font-size: 2em;
-	font-weight: bold;
-	letter-spacing: 2px;
+	letter-spacing: 1.5;
+	margin-top: 10px;
+	a {
+		display: inline;
+		padding-left: 15px;
+	}
 }
 
-.filler {
-	height:50px;
-}
+
+
+	/** banner styling **/
 
 .banner {
 	height: 240px;
@@ -92,12 +98,6 @@ nav {
 	background-color: #999;
 }
 
-.navbar-right li {
-	text-align: center;
-	border-bottom: 1px solid #ddd;
-	height: 50px;
-	margin-top: 15px;
-}
 
 
 .event {
@@ -131,6 +131,8 @@ nav {
 		margin-right: 15px;
 	}
 }
+
+	/** Footer Styling **/
 
 .footer {
 	height: 70px;
@@ -166,18 +168,13 @@ nav {
 /** desktop nav **/
 
 nav {
-	height: 50px;
-	width: 100%;
-	font-size: 1em;
 	font-weight: bold;
-	border-bottom: 2px solid #666;
 	ul {
 		display: inline;
 		float: right;
 		padding: 0;
 		opacity: 1;
 		margin: 0 auto;
-		height: 50px;
 		li {
 			display: inline;
 			padding-bottom: 0px;
@@ -199,29 +196,8 @@ nav {
 		display: none;
 	}
 
-	/** clearfix **/
+ /** desktop Banner **/
 
-.clearfix:before,
-.clearfix:after {
-  content: "  ";
-  display: table;
-}
-
-.clearfix:after {
-  clear: both;
-}
-
-.clearfix {
-  *zoom: 1;
-}
-
-
- /** desktop BS styling **/
-	.navbar-brand {
-		margin-top: 12px;
-		font-size: 3em;
-		font-weight: normal;	
-	}
 	.banner {
 		height: 350px;
 	}
