--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,9 +1,13 @@
+
 /* colors */
 
-/*	light brown = A57745
-	dark brown = 583C1C
-	green = 5CB26A
-	purple = 8C59F1
+$background: #F1BA7D;
+$borders: #583C1C;
+$selected: #A57745;
+$action: #8EE59C;
+$actionContrast: #C3FFCD;
+$contrast: #8C59F1;
+$textcolor: #222;
 	
 
 /*********** Remove default styling ***********/
@@ -19,7 +23,7 @@ li {
 
 /*********** Mobile Styling ************/
 
-	/** mobile nav **/
+/** mobile nav **/
 
 nav {
 	position: fixed;
@@ -27,13 +31,13 @@ nav {
 	z-index: 10000;
 	width: 100%;
 	height: 50px;
-	background: #ccc;
-	border-bottom: 2px solid #666;
+	background-color: $background;
+	border-bottom: 2px solid $borders;
 	ul {
 		display: none;
 		height: auto;
-		background: #ccc;
-		opacity: 0.8;
+		background: $background;
+		opacity: 0.9;
 		padding: 0;
 		margin: 0;
 		z-index: 9000;
@@ -42,30 +46,27 @@ nav {
 			padding-top: 20px;
 			text-align: center;
 			font-size: 1.5em;
-			font-weight: bold;
 			a {
+				color: $textcolor;
 				padding: 5px;
 			}
 			a:hover, a:active {
-				background-color: #ddd;
+				background-color: $selected;
 			}
 		}
 	}
 }
 
+		/*changes the color of the link to a current page.  
+		"selected" class is added by PHP to the header include file*/
+
 .selected {
 	background-color: #ddd;
 }
 
-#pull {
-	display: block;
-	background-color: #ccc;
-	width: 100%;
-	position: relative;
-}
+		/*displays and positions navicon in mobile view*/
 
-#pull:after {
-	content: "";
+#navicon {
 	background: url('../img/navicon.png') no-repeat;
 	width: 30px;
 	height: 50px;
@@ -80,28 +81,92 @@ nav {
 .logo {
 	display: inline-block;
 	font-size: 2em;
+	font-weight: bold;
 	letter-spacing: 1.5;
 	margin-top: 10px;
 	a {
+		color: $textcolor;
 		display: inline;
 		padding-left: 15px;
 	}
 }
 
-
-
 	/** banner styling **/
 
 .banner {
 	height: 240px;
-	border-bottom: 2px solid #000;
-	background-color: #999;
+	width: 100%;
+	border-bottom: 2px solid $borders;
+	background: url('../img/Cathedral1.jpg') no-repeat;
+	background-size: cover;
+	background-color: $background;
+	p {
+		position: absolute;
+		top: 180px;
+		right: 30px;
+		font-size: 1.5em;
+		z-index: 10;
+		-webkit-animation: groupname 5s;
+		animation: groupname 5s;
+	}
 }
 
+	/*	animates group name to change color and fade right on page load*/
 
+@-webkit-keyframes groupname {
+	from {
+		color: $background;
+		right: 50;
+	}
+	to {
+		color: $textcolor;
+		right: 30;
+	}
+}
+
+@keyframes groupname {
+	from {
+		color: $background;
+		right: 50;
+	}
+	to {
+		color: $textcolor;
+		right: 30;
+	}
+}
+
+	/*	semi-opaque color layer over banner image */
+
+.banner::after {
+	content: "";
+	background-color: $background;
+	opacity: 0.4;
+	height: 240px;
+	top: 0;
+	left: 0;
+	right: 0;
+	position: absolute;
+	z-index: 2;
+}
+
+	/* events area styling */
 
 .event {
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid $borders;
+	button {
+		background-color: $action;
+		border: none;
+		border-radius: 5px;
+		height: 40px;
+		width: 140px;
+		font-weight: bold;
+		-webkit-transition: background-color .5s;
+		transition: background-color .5s;
+	}
+	button:hover, button:active {
+		background-color: $actionContrast;
+		border: 2px solid $action;
+	}
 }
 .event, .listen, {
 	height: 180px;
@@ -115,13 +180,12 @@ nav {
 	}
 }
 
-.col-sm-4 {
-	border-left: 1px solid #ddd;
-}
-
 .splash-about, .watch {
 	display: none;
 }
+
+	/* about area styling */
+
 
 .about {
 	display: inline-block;
@@ -137,7 +201,7 @@ nav {
 .footer {
 	height: 70px;
 	padding-top: 10px;
-	background-color: #ddd;
+	background-color: $background;
 	p {
 		display: inline;
 		float: left;
@@ -167,9 +231,7 @@ nav {
 
 /** desktop nav **/
 
-nav {
-	font-weight: bold;
-	ul {
+	nav ul {
 		display: inline;
 		float: right;
 		padding: 0;
@@ -179,39 +241,48 @@ nav {
 			display: inline;
 			padding-bottom: 0px;
 			a {
-				color: #222;
 				display: inline-block;
 				padding: 0;
 				width: 100px;
 				text-align: center;
 				line-height: 50px;
-				border-left: 1px solid #aaa;
 				box-sizing: border-box;
 			}
 		}
 	}
-}
 
-#pull {
-		display: none;
-	}
+	/*removes navicon*/
 
- /** desktop Banner **/
+	#navicon{
+			display: none;
+		}
+
+ 	/** desktop Banner **/
 
 	.banner {
 		height: 350px;
+		p {
+			top: 260px;
+			font-size: 2em;
+		}
+	}
+
+	/*resizes color overlay of banner image*/
+
+	.banner::after {
+		height: 350;
 	}
 
 	.splash-about {
-		border-left: 1px solid #ddd;
-		border-bottom: 1px solid #ddd;
+		border-left: 1px solid $borders;
+		border-bottom: 1px solid $borders;
 		display: inline-block;
 		height: 180px;
 	}
 
 	.watch {
 		display: inline-block;
-		border-left: 1px solid #ddd;
+		border-left: 1px solid $borders;
 		height: 300px;
 		.screen {
 			float: right;
@@ -226,8 +297,6 @@ nav {
 			}
 		}
 	}
-
-
 }
 
 
