--- a/css/styles.css
+++ b/css/styles.css
@@ -29,10 +29,12 @@ nav {
       padding-bottom: 20px;
       padding-top: 20px;
       text-align: center;
-      font-size: 1.5em; }
+      font-size: 1.2em; }
       nav ul li a {
         color: #222;
-        padding: 5px; }
+        padding: 5px;
+        -webkit-transition: background-color .5s;
+        transition: background-color .5s; }
       nav ul li a:hover, nav ul li a:active {
         background-color: #A57745; }
 
@@ -65,7 +67,7 @@ nav {
 
 /** banner styling **/
 .banner {
-  height: 240px;
+  height: 300px;
   width: 100%;
   border-bottom: 2px solid #583C1C;
   background: url("../img/Cathedral1.jpg") no-repeat;
@@ -73,7 +75,8 @@ nav {
   background-color: #F1BA7D; }
   .banner p {
     position: absolute;
-    top: 180px;
+    margin: 0;
+    top: 260px;
     right: 30px;
     font-size: 1.5em;
     z-index: 10;
@@ -100,14 +103,26 @@ nav {
   content: "";
   background-color: #F1BA7D;
   opacity: 0.4;
-  height: 240px;
+  height: 300px;
   top: 0;
   left: 0;
   right: 0;
   position: absolute;
   z-index: 2; }
 
-/* events area styling */
+/* main content modules styling */
+
+.event, .listen {
+  height: 180px;
+  padding-bottom: 20px; }
+  .event p, .event button, .listen p, .listen button {
+    margin-left: 80px;
+    margin-right: 20px; }
+  .event h1, .listen h1 {
+    padding-left: 20px; }
+
+  /* event area styling*/
+
 .event {
   border-bottom: 1px solid #583C1C; }
   .event button {
@@ -123,25 +138,13 @@ nav {
     background-color: #C3FFCD;
     border: 2px solid #8EE59C; }
 
-.event, .listen {
-  height: 180px;
-  padding-bottom: 20px; }
-  .event p, .event button, .listen p, .listen button {
-    margin-left: 80px;
-    margin-right: 20px; }
-  .event h1, .listen h1 {
-    padding-left: 20px; }
 
 .splash-about, .watch {
   display: none; }
 
 /* about area styling */
 .about {
-  display: inline-block;
-  margin-bottom: 30px; }
-  .about h2, .about p {
-    margin-left: 15px;
-    margin-right: 15px; }
+  display: hidden;}
 
 /** Footer Styling **/
 .footer {
@@ -194,7 +197,7 @@ nav {
   .banner {
     height: 350px; }
     .banner p {
-      top: 260px;
+      top: 300px;
       font-size: 2em; }
 
   /*resizes color overlay of banner image*/
