--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ nav {
 
 /** banner styling **/
 .banner {
-  height: 300px;
+  height: 240px;
   width: 100%;
   border-bottom: 2px solid #583C1C;
   background: url("../img/Cathedral1.jpg") no-repeat;
@@ -75,8 +75,7 @@ nav {
   background-color: #F1BA7D; }
   .banner p {
     position: absolute;
-    margin: 0;
-    top: 260px;
+    top: 180px;
     right: 30px;
     font-size: 1.5em;
     z-index: 10;
@@ -103,26 +102,14 @@ nav {
   content: "";
   background-color: #F1BA7D;
   opacity: 0.4;
-  height: 300px;
+  height: 240px;
   top: 0;
   left: 0;
   right: 0;
   position: absolute;
   z-index: 2; }
 
-/* main content modules styling */
-
-.event, .listen {
-  height: 180px;
-  padding-bottom: 20px; }
-  .event p, .event button, .listen p, .listen button {
-    margin-left: 80px;
-    margin-right: 20px; }
-  .event h1, .listen h1 {
-    padding-left: 20px; }
-
-  /* event area styling*/
-
+/* events area styling */
 .event {
   border-bottom: 1px solid #583C1C; }
   .event button {
@@ -138,13 +125,25 @@ nav {
     background-color: #C3FFCD;
     border: 2px solid #8EE59C; }
 
+.event, .listen {
+  height: 180px;
+  padding-bottom: 20px; }
+  .event p, .event button, .listen p, .listen button {
+    margin-left: 80px;
+    margin-right: 20px; }
+  .event h1, .listen h1 {
+    padding-left: 20px; }
 
 .splash-about, .watch {
   display: none; }
 
 /* about area styling */
 .about {
-  display: hidden;}
+  display: inline-block;
+  margin-bottom: 30px; }
+  .about h2, .about p {
+    margin-left: 15px;
+    margin-right: 15px; }
 
 /** Footer Styling **/
 .footer {
@@ -197,7 +196,7 @@ nav {
   .banner {
     height: 350px; }
     .banner p {
-      top: 300px;
+      top: 260px;
       font-size: 2em; }
 
   /*resizes color overlay of banner image*/
