completed mobile styling of events section

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,7 +21,14 @@ li {
 	list-style: none;
 }
 
+/*font-family*/
+
+body {
+	font-family: 'Open Sans', sans-serif;
+}
+
 /*********** Mobile Styling ************/
+
 
 /** mobile nav **/
 
@@ -104,7 +111,7 @@ nav {
 	background-color: $background;
 	p {
 		position: absolute;
-		top: 180px;
+		top: 40px;
 		right: 30px;
 		font-size: 1.5em;
 		z-index: 10;
@@ -151,10 +158,35 @@ nav {
 	z-index: 2;
 }
 
+/*main content area styling*/
+
+.event, .listen, {
+	height: auto;
+	padding-bottom: 20px;
+	p {
+		margin-left: 80px;
+		font-size: .8em;
+	}
+	h1 {
+		font-size: 1.2em;
+		padding-left: 20px;
+	}
+	button {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
 	/* events area styling */
 
 .event {
 	border-bottom: 1px solid $borders;
+	p {
+		display: inline-block;
+		width: 60%;
+		margin-top: 0;
+	}
 	button {
 		background-color: $action;
 		border: none;
@@ -168,17 +200,6 @@ nav {
 	button:hover, button:active {
 		background-color: $actionContrast;
 		border: 2px solid $action;
-	}
-}
-.event, .listen, {
-	height: 180px;
-	padding-bottom: 20px;
-	p, button {
-		margin-left: 80px;
-		margin-right: 20px;
-	}
-	h1 {
-		padding-left: 20px;
 	}
 }
 
@@ -201,17 +222,19 @@ nav {
 	/** Footer Styling **/
 
 .footer {
-	height: 70px;
+	height: 100px;
 	padding-top: 10px;
 	background-color: $background;
 	p {
 		display: inline;
 		float: left;
+		width: 50%;
 		margin-bottom: 5px;
 		margin-left: 15px;
+		font-size: .8em;
 	}
 	.social-links {
-		display: inline;
+		display: inline-block;
 		float: right;
 		padding-left: 0px;
 		.social-icon {
