--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@ a {
 li {
   list-style: none; }
 
+/*font-family*/
+body {
+  font-family: 'Open Sans', sans-serif; }
+
 /*********** Mobile Styling ************/
 /** mobile nav **/
 nav {
@@ -75,7 +79,7 @@ nav {
   background-color: #F1BA7D; }
   .banner p {
     position: absolute;
-    top: 180px;
+    top: 40px;
     right: 30px;
     font-size: 1.5em;
     z-index: 10;
@@ -109,9 +113,28 @@ nav {
   position: absolute;
   z-index: 2; }
 
+/*main content area styling*/
+.event, .listen {
+  height: auto;
+  padding-bottom: 20px; }
+  .event p, .listen p {
+    margin-left: 80px;
+    font-size: .8em; }
+  .event h1, .listen h1 {
+    font-size: 1.2em;
+    padding-left: 20px; }
+  .event button, .listen button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
+
 /* events area styling */
 .event {
   border-bottom: 1px solid #583C1C; }
+  .event p {
+    display: inline-block;
+    width: 60%;
+    margin-top: 0; }
   .event button {
     background-color: #8EE59C;
     border: none;
@@ -124,15 +147,6 @@ nav {
   .event button:hover, .event button:active {
     background-color: #C3FFCD;
     border: 2px solid #8EE59C; }
-
-.event, .listen {
-  height: 180px;
-  padding-bottom: 20px; }
-  .event p, .event button, .listen p, .listen button {
-    margin-left: 80px;
-    margin-right: 20px; }
-  .event h1, .listen h1 {
-    padding-left: 20px; }
 
 .splash-about, .watch {
   display: none; }
@@ -147,16 +161,18 @@ nav {
 
 /** Footer Styling **/
 .footer {
-  height: 70px;
+  height: 100px;
   padding-top: 10px;
   background-color: #F1BA7D; }
   .footer p {
     display: inline;
     float: left;
+    width: 50%;
     margin-bottom: 5px;
-    margin-left: 15px; }
+    margin-left: 15px;
+    font-size: .8em; }
   .footer .social-links {
-    display: inline;
+    display: inline-block;
     float: right;
     padding-left: 0px; }
     .footer .social-links .social-icon {
