--- a/css/styles.css
+++ b/css/styles.css
@@ -123,10 +123,6 @@ nav {
   .event h1, .listen h1 {
     font-size: 1.2em;
     padding-left: 20px; }
-  .event button, .listen button {
-    display: block;
-    margin-left: auto;
-    margin-right: auto; }
 
 /* events area styling */
 .event {
@@ -136,12 +132,15 @@ nav {
     width: 60%;
     margin-top: 0; }
   .event button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #8EE59C;
     border: none;
     border-radius: 5px;
     height: 40px;
     width: 140px;
-    font-weight: bold;
+    letter-spacing: 1.2;
     -webkit-transition: background-color .5s;
     transition: background-color .5s; }
   .event button:hover, .event button:active {
@@ -171,6 +170,8 @@ nav {
     margin-bottom: 5px;
     margin-left: 15px;
     font-size: .8em; }
+    .footer p a {
+      text-decoration: underline; }
   .footer .social-links {
     display: inline-block;
     float: right;
