--- a/css/styles.scss
+++ b/css/styles.scss
@@ -171,11 +171,6 @@ nav {
 		font-size: 1.2em;
 		padding-left: 20px;
 	}
-	button {
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-	}
 }
 
 	/* events area styling */
@@ -188,12 +183,15 @@ nav {
 		margin-top: 0;
 	}
 	button {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
 		background-color: $action;
 		border: none;
 		border-radius: 5px;
 		height: 40px;
 		width: 140px;
-		font-weight: bold;
+		letter-spacing: 1.2;
 		-webkit-transition: background-color .5s;
 		transition: background-color .5s;
 	}
@@ -232,6 +230,9 @@ nav {
 		margin-bottom: 5px;
 		margin-left: 15px;
 		font-size: .8em;
+		a {
+			text-decoration: underline;
+		}
 	}
 	.social-links {
 		display: inline-block;
