--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ li {
 
 /*font-family*/
 body {
+  font-size: 16px;
   font-family: 'Open Sans', sans-serif; }
 
 /*********** Mobile Styling ************/
@@ -63,7 +64,7 @@ nav {
   font-size: 2em;
   font-weight: bold;
   letter-spacing: 1.5;
-  margin-top: 10px; }
+  margin-top: 4px; }
   .logo a {
     color: #222;
     display: inline;
@@ -78,13 +79,14 @@ nav {
   background-size: cover;
   background-color: #F1BA7D; }
   .banner p {
+    color: #F1BA7D;
     position: absolute;
     top: 40px;
-    right: 30px;
+    right: 50px;
     font-size: 1.5em;
     z-index: 10;
-    -webkit-animation: groupname 5s;
-    animation: groupname 5s; }
+    -webkit-animation: groupname 6s 0.5s forwards;
+    animation: groupname 6s 0.5s forwards; }
 
 /*	animates group name to change color and fade right on page load*/
 @-webkit-keyframes groupname {
@@ -116,16 +118,17 @@ nav {
 /*main content area styling*/
 .event, .listen, .splash-about, .watch {
   height: auto;
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  display: inline-block;
+  width: 100%; }
   .event p, .listen p, .splash-about p, .watch p {
-    margin-left: 80px;
+    margin-left: 20%;
     font-size: .8em; }
     .event p a, .listen p a, .splash-about p a, .watch p a {
       text-decoration: underline; }
   .event h1, .listen h1, .splash-about h1, .watch h1 {
     font-size: 1.2em;
-    margin-left: 20px;
-    text-decoration: underline; }
+    margin-left: 20px; }
 
 /* events area styling */
 .event {
@@ -163,6 +166,8 @@ nav {
 
 /** Footer Styling **/
 .footer {
+  display: inline-block;
+  width: 100%;
   height: 100px;
   padding-top: 10px;
   background-color: #F1BA7D; }
@@ -190,6 +195,64 @@ nav {
 
 /******************DESKTOP   STYLING  ********************/
 @media only screen and (min-width: 768px) {
+  /*show about and watch sections*/
+  .splash-about, .watch {
+    display: inline-block; }
+
+  /*****************GRID***********************/
+  .grid-container {
+    float: left;
+    min-height: 1px; }
+
+  .grid-container:first-child {
+    left-margin: 0; }
+
+  /* Columns are 65px wide, with 20px gutters
+  =========================================== */
+  .grid-1 {
+    width: 6.5%; }
+
+  .grid-2 {
+    width: 15%; }
+
+  .grid-3 {
+    width: 23.5%; }
+
+  .grid-4 {
+    width: 33%; }
+
+  .grid-5 {
+    width: 41.5%; }
+
+  .grid-6 {
+    width: 49%; }
+
+  .grid-7 {
+    width: 58%; }
+
+  .grid-8 {
+    width: 67%; }
+
+  .grid-9 {
+    width: 74.5%; }
+
+  .grid-10 {
+    width: 83%; }
+
+  .grid-11 {
+    width: 91.5%; }
+
+  .grid-12 {
+    width: 100%; }
+
+  /* Clearfix
+  ================================ */
+  .group:after,
+  .grid-container:after {
+    content: " ";
+    display: table;
+    clear: both; }
+
   /** desktop nav **/
   nav ul {
     display: inline;
@@ -216,7 +279,7 @@ nav {
   .banner {
     height: 350px; }
     .banner p {
-      top: 260px;
+      top: 280px;
       font-size: 2em;
       margin: 0; }
 
@@ -224,57 +287,26 @@ nav {
   .banner::after {
     height: 350; }
 
-  .splash-about {
-    border-left: 1px solid #583C1C;
-    border-bottom: 1px solid #583C1C;
-    display: inline-block;
-    height: 180px; }
+  .watch .screen {
+    float: right;
+    margin-right: 50px;
+    height: 120px;
+    width: 200px;
+    background-color: #aaa;
+    border-radius: 10px; }
+    .watch .screen button {
+      margin-left: 80px;
+      margin-top: 50px; }
 
-  .watch {
-    display: inline-block;
-    border-left: 1px solid #583C1C;
-    height: 300px; }
-    .watch .screen {
-      float: right;
-      margin-right: 50px;
-      height: 120px;
-      width: 200px;
-      background-color: #aaa;
-      border-radius: 10px; }
-      .watch .screen button {
-        margin-left: 80px;
-        margin-top: 50px; }
+  /*  main content area styling  */
+  .event, .splash-about {
+    height: 150px;
+    border-bottom: 1px solid #583C1C; }
 
-  /**  desktop main content area styling**/
-  .event, .listen, .splash-about, .watch {
-    display: inline-block;
-    height: 160px;
-    display: inline-block; }
-    .event h1, .listen h1, .splash-about h1, .watch h1 {
-      display: inline-block;
-      float: left;
-      font-size: 1.8em;
-      text-decoration: none;
-      height: 100%;
-      margin-bottom: 0; }
-    .event p, .listen p, .splash-about p, .watch p {
-      display: inline;
-      margin: 0;
-      width: 80%;
-      font-size: .8em; }
-      .event p a, .listen p a, .splash-about p a, .watch p a {
-        text-decoration: underline; }
-
-  /*desktop event area styling*/
-  .event {
-    width: 60%;
+  .event, .listen {
     border-right: 1px solid #583C1C; }
-    .event p {
-      margin: 30px;
-      display: inline-block;
-      width: 70%; }
-    .event button {
-      display: block;
-      margin: auto; } }
+
+  .splash-about {
+    overflow: scroll; } }
 
 /*# sourceMappingURL=styles.css.map */
