--- a/css/styles.scss
+++ b/css/styles.scss
@@ -24,6 +24,7 @@ li {
 /*font-family*/
 
 body {
+	font-size: 16px;
 	font-family: 'Open Sans', sans-serif;
 }
 
@@ -92,7 +93,7 @@ nav {
 	font-size: 2em;
 	font-weight: bold;
 	letter-spacing: 1.5;
-	margin-top: 10px;
+	margin-top: 4px;
 	a {
 		color: $textcolor;
 		display: inline;
@@ -110,13 +111,14 @@ nav {
 	background-size: cover;
 	background-color: $background;
 	p {
+		color: $background;
 		position: absolute;
 		top: 40px;
-		right: 30px;
+		right: 50px;
 		font-size: 1.5em;
 		z-index: 10;
-		-webkit-animation: groupname 5s;
-		animation: groupname 5s;
+		-webkit-animation: groupname 6s 0.5s forwards;
+		animation: groupname 6s 0.5s forwards;
 	}
 }
 
@@ -163,8 +165,10 @@ nav {
 .event, .listen, .splash-about, .watch{
 	height: auto;
 	padding-bottom: 20px;
+	display: inline-block;
+	width: 100%;
 	p {
-		margin-left: 80px;
+		margin-left: 20%;
 		font-size: .8em;
 		a {
 			text-decoration: underline;
@@ -173,7 +177,6 @@ nav {
 	h1 {
 		font-size: 1.2em;
 		margin-left: 20px;
-		text-decoration: underline;
 	}
 }
 
@@ -224,6 +227,8 @@ nav {
 	/** Footer Styling **/
 
 .footer {
+	display: inline-block;
+	width: 100%;
 	height: 100px;
 	padding-top: 10px;
 	background-color: $background;
@@ -260,6 +265,74 @@ nav {
 
 @media only screen and (min-width : 768px) {
 
+		/*show about and watch sections*/
+
+	.splash-about, .watch {
+		display: inline-block;
+	}
+
+/*****************GRID***********************/
+	.grid-container {
+		float: left;
+		min-height: 1px;
+	}
+
+	.grid-container:first-child {
+		left-margin: 0;
+	}
+	
+	/* Columns are 65px wide, with 20px gutters
+	=========================================== */
+
+	.grid-1 {
+		width: 6.5%;
+	}
+
+	.grid-2 {
+		width: 15%;
+	}
+
+	.grid-3 {
+		width: 23.5%;
+	}
+	.grid-4 {
+		width: 33%;
+	}
+	.grid-5 {
+		width: 41.5%;
+	}
+	.grid-6 {
+		width: 49%;
+	}
+	.grid-7 {
+		width: 58%;
+	}
+	.grid-8 {
+		width: 67%;
+	}
+	.grid-9 {
+		width: 74.5%;
+	}
+	.grid-10 {
+		width: 83%;
+	}
+	.grid-11 {
+		width: 91.5%;
+	}
+	.grid-12 {
+		width: 100%;
+	}
+
+	/* Clearfix
+	================================ */
+
+	.group:after,
+	.grid-container:after {
+	  content: " ";
+	  display: table;
+	  clear: both;
+	}
+
 /** desktop nav **/
 
 	nav ul {
@@ -293,7 +366,7 @@ nav {
 	.banner {
 		height: 350px;
 		p {
-			top: 260px;
+			top: 280px;
 			font-size: 2em;
 			margin: 0;
 		}
@@ -305,17 +378,7 @@ nav {
 		height: 350;
 	}
 
-	.splash-about {
-		border-left: 1px solid $borders;
-		border-bottom: 1px solid $borders;
-		display: inline-block;
-		height: 180px;
-	}
-
 	.watch {
-		display: inline-block;
-		border-left: 1px solid $borders;
-		height: 300px;
 		.screen {
 			float: right;
 			margin-right: 50px;
@@ -330,47 +393,21 @@ nav {
 		}
 	}
 
-	/**  desktop main content area styling**/
+	/*  main content area styling  */
 
-	.event, .listen, .splash-about, .watch{
-		display: inline-block;
-		height: 160px;
-		display: inline-block;
-		h1 {
-			display: inline-block;
-			float: left;
-			font-size: 1.8em;
-			text-decoration: none;
-			height: 100%;
-			margin-bottom: 0;
-		}
-		p {
-			display: inline;
-			margin: 0;
-			width: 80%;
-			font-size: .8em;
-			a {
-				text-decoration: underline;
-			}
-		}
+	.event, .splash-about{
+		height: 150px;
+		border-bottom: 1px solid $borders;
 	}
-		/*desktop event area styling*/
 
-	.event {
-		width: 60%;
+	.event, .listen {
 		border-right: 1px solid $borders;
-		p {
-			margin: 30px;
-			display: inline-block;
-			width: 70%;
-		}
-		button {
-			display: block;
-			margin: auto;
-		}
-		
+	}
+		.splash-about {
+		overflow: scroll;
 	}
 }
+
 
 
 
