--- a/css/styles.scss
+++ b/css/styles.scss
@@ -229,8 +229,7 @@ nav {
 .footer {
 	display: inline-block;
 	width: 100%;
-	height: 100px;
-	padding-top: 10px;
+	height: 80px;
 	background-color: $background;
 	p {
 		display: inline;
@@ -280,7 +279,7 @@ nav {
 	.grid-container:first-child {
 		left-margin: 0;
 	}
-	
+
 	/* Columns are 65px wide, with 20px gutters
 	=========================================== */
 
@@ -378,19 +377,9 @@ nav {
 		height: 350;
 	}
 
-	.watch {
-		.screen {
-			float: right;
-			margin-right: 50px;
-			height: 120px;
-			width: 200px;
-			background-color: #aaa;
-			border-radius: 10px;
-			button {
-				margin-left: 80px;
-				margin-top: 50px;
-			}
-		}
+	.watch iframe {
+		display: block;
+		margin: auto;
 	}
 
 	/*  main content area styling  */
