styling about page

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ nav {
 /*changes the color of the link to a current page.  
 "selected" class is added by PHP to the header include file*/
 .selected {
-  background-color: #ddd; }
+  background-color: #A57745; }
 
 /*displays and positions navicon in mobile view*/
 #navicon {
@@ -72,7 +72,7 @@ nav {
 
 /** banner styling **/
 .banner {
-  height: 240px;
+  height: 190px;
   width: 100%;
   border-bottom: 2px solid #583C1C;
   background: url("../img/Cathedral1.jpg") no-repeat;
@@ -108,25 +108,31 @@ nav {
   content: "";
   background-color: #F1BA7D;
   opacity: 0.4;
-  height: 240px;
+  margin-top: 50px;
+  height: 190px;
   top: 0;
   left: 0;
   right: 0;
   position: absolute;
   z-index: 2; }
 
+/*shifts following elements from under the nav*/
+.filler {
+  height: 50px; }
+
 /*main content area styling*/
-.event, .listen, .splash-about, .watch {
+.event, .listen, .splash-about, .watch, .about {
   height: auto;
   padding-bottom: 20px;
   display: inline-block;
   width: 100%; }
-  .event p, .listen p, .splash-about p, .watch p {
+  .event p, .listen p, .splash-about p, .watch p, .about p {
     margin-left: 20%;
+    padding-right: 15px;
     font-size: .8em; }
-    .event p a, .listen p a, .splash-about p a, .watch p a {
+    .event p a, .listen p a, .splash-about p a, .watch p a, .about p a {
       text-decoration: underline; }
-  .event h1, .listen h1, .splash-about h1, .watch h1 {
+  .event h1, .event h2, .listen h1, .listen h2, .splash-about h1, .splash-about h2, .watch h1, .watch h2, .about h1, .about h2 {
     font-size: 1.2em;
     margin-left: 20px; }
 
@@ -157,12 +163,12 @@ nav {
   display: none; }
 
 /* about area styling */
-.about {
-  display: inline-block;
-  margin-bottom: 30px; }
-  .about h2, .about p {
-    margin-left: 15px;
-    margin-right: 15px; }
+.headshot {
+  background: url("../img/headshot.jpg") no-repeat;
+  background-size: cover;
+  height: 200px;
+  width: 140px;
+  margin-left: 20%; }
 
 /** Footer Styling **/
 .footer {
@@ -175,8 +181,9 @@ nav {
     float: left;
     width: 50%;
     margin-bottom: 5px;
+    margin-top: 15px;
     margin-left: 15px;
-    font-size: .8em; }
+    font-size: .7em; }
     .footer p a {
       text-decoration: underline; }
   .footer .social-links {
@@ -276,7 +283,7 @@ nav {
 
   /** desktop Banner **/
   .banner {
-    height: 350px; }
+    height: 300px; }
     .banner p {
       top: 280px;
       font-size: 2em;
@@ -284,7 +291,7 @@ nav {
 
   /*desktop resizes color overlay of banner image*/
   .banner::after {
-    height: 350; }
+    height: 300px; }
 
   .watch iframe {
     display: block;
